Update User entity's getAuthorities() method to return a list of the user's roles